    - Fixed Tiberium Only map generation preset not working with new planets
    - Fixed Tiberium Centrifuging breaking progression by giving almost pure scrap instead of ores
  Changes:
    - Changed Tiberium Slurry Centrifuging to unlock when you craft Tiberium Slurry instead of Water (oops)
    - Corrected Tiberium refining recipes to reflect the new water-to-steam ratio in Factorio 2.0
  Features:
    - Added new Tiberium on All Planets setting to enable Tiberium naturally spawning on all planets
    - Added new setting to allow Tiberium Centrifuging to give ores from any surface. Can be useful for modded playthroughs, but will bring back the scrap in vanilla. Use the Override Centrifuging Outputs or Exlcude Specific Resources settings to tweak as needed.
---------------------------------------------------------------------------------------------------
Version: 2.0.2
  Bugfixes:
    - Fixed crash with P.U.M.P. mod
    - Fixed Growth Accelerator message crash
    - Fixed player taking damage while looking at Tiberium Ore in map view
    - Fixed MARV not harvesting ore when driving remotely
    - Fixed Blue Tiberium spawn notification GPS coordinates to link to the correct planet
---------------------------------------------------------------------------------------------------
Version: 2.0.1
  Features:
    - Moved to Factorio version 2.0 (playable with Space Age but not balanced/reworked for Space Age)
    - Added triggers to some technologies to automatically unlock them as you mine and refine Tiberium
    - Added setting to go back to old technologies without triggers
---------------------------------------------------------------------------------------------------
Version: 1.1.30
  Bugfixes:
    - Fixed crash when deleting surface that has SRF emitters on it (this one slipped through 1.1.17's surface fixes)
    - Fixed possible crash from trees growing on top of Tiberium Ore patches