@@ -180,6 +180,8 @@ tiberium-mutation=Blue Tiberium Mutation
 tiberium-monoculture=Tiberium Growth Manipulation
 tiberium-easy-transmutation-tech=Tiberium Nuclear Physics for Dummies
 tiberium-transmutation-tech=Tiberium Nuclear Physics
+# __1__ is replace with a planet name
+tiberium-transmutation-tech-planet=Tiberium Nuclear Physics for __1__ Resources
 tiberium-mechanical-research=Mechanical Tiberium Testing
 tiberium-thermal-research=Thermal Tiberium Testing
 tiberium-chemical-research=Tiberium Chemistry Testing
@@ -213,6 +215,8 @@ tiberium-mutation=Purely for scientific reasons, we found a way to cultivate Blu
 tiberium-monoculture=Block mutations to force Blossom Trees to only grow Tiberium Ore of a single type.
 tiberium-easy-transmutation-tech=Our scientists are embarrassed to admit that they wasted so much time researching transmutation when they could have just turned on the "easy mode" setting.
 tiberium-transmutation-tech=Understanding how Tiberium operates on a molecular level to unlock the secrets of nuclear transmutation.
+# __1__ is replace with a planet name
+tiberium-transmutation-tech-planet=Better understanding how Tiberium operates on a molecular level to unlock the secrets of nuclear transmutation for resources found on __1__.
 tiberium-mechanical-research=Testing Tiberium's mechanical properties as we begin to learn about this foreign material.
 tiberium-thermal-research=Testing Tiberium's thermal properties and using its molten form to unlock more of its potential.
 tiberium-chemical-research=Testing Tiberium's chemical properties and refining it to its purest and most volatile form.
@@ -260,6 +264,8 @@ tiberium-starting-area=Tiberium in Starting Area
 tiberium-wont-damage-biters=Biters Immune to Tiberium Damage
 tiberium-pollution-multiplier=Tiberium Pollution Multiplier
 tiberium-direct-catalyst=Require Resource Seed for Transmutation
+tiberium-direct-surface-condition=Restrict Transmutation to Origin Planets
+tiberium-direct-planet-techs=Separate Transmutation Tech for Each Planet 
 tiberium-easy-recipes=Easy Mode
 tiberium-byproduct-1=Refining Sludge Waste
 tiberium-byproduct-2=Refining Sulfur Waste
@@ -280,6 +286,8 @@ tiberium-technology-triggers=Use Triggers to Unlock Tiberium Technology
 
 [mod-setting-description]
 tiberium-direct-catalyst=Requires a bit of the target resource as a seed for transmutation recipes. Helps prevent resources from other mods from being unlocked out of order.\nDefault: disabled
+tiberium-direct-surface-condition=Tiberium can only be transmuted to other resources on planets where they occur naturally.\nDefault: enabled
+tiberium-direct-planet-techs=Require additional technologies with science packs from other planets to unlock transmutation for the resources on that planet.\nDefault: enabled
 tiberium-easy-recipes=Simplifies recipes by removing all catalysts and introducing early transmutation recipes so you never have to deal with centrifuging. For the full experience, also turn off the Waste settings below.\nDefault: disabled
 tiberium-byproduct-1=Whether refining recipes produce Tiberium Sludge waste.\nDefault: enabled
 tiberium-byproduct-2=Whether refining recipes produce Sulfur waste.\nDefault: disabled
