@@ -76,38 +76,52 @@ data:extend{
 	},
 	{
 		type = "bool-setting",
-		name = "tiberium-easy-recipes",
+		name = "tiberium-direct-surface-condition",
 		setting_type = "startup",
-		default_value = false,
+		default_value = true,
 		order = "b4",
 	},
 	{
 		type = "bool-setting",
-		name = "tiberium-byproduct-1",
+		name = "tiberium-direct-planet-techs",
 		setting_type = "startup",
 		default_value = true,
 		order = "b5",
 	},
 	{
 		type = "bool-setting",
-		name = "tiberium-byproduct-2",
+		name = "tiberium-easy-recipes",
 		setting_type = "startup",
 		default_value = false,
 		order = "b6",
 	},
 	{
 		type = "bool-setting",
+		name = "tiberium-byproduct-1",
+		setting_type = "startup",
+		default_value = true,
+		order = "b7",
+	},
+	{
+		type = "bool-setting",
+		name = "tiberium-byproduct-2",
+		setting_type = "startup",
+		default_value = false,
+		order = "b8",
+	},
+	{
+		type = "bool-setting",
 		name = "tiberium-byproduct-direct",
 		setting_type = "startup",
 		default_value = false,
-		order = "b7",
+		order = "b9",
 	},
 	{
 		type = "bool-setting",
 		name = "tiberium-auto-scale-performance",
 		setting_type = "runtime-global",
 		default_value = false,
-		order = "b8",
+		order = "b10",
 	},
 	{
 		type = "bool-setting",
