@@ -7,6 +7,7 @@ Version: 2.0.3
   Changes:
     - Changed Tiberium Slurry Centrifuging to unlock when you craft Tiberium Slurry instead of Water (oops)
     - Corrected Tiberium refining recipes to reflect the new water-to-steam ratio in Factorio 2.0
+    - Transmutation recipes for ores from other planets now require science packs from those planets to unlock and can only be produced on their planets of origin (both of these can be turned off with settings)
   Features:
     - Added new Tiberium on All Planets setting to enable Tiberium naturally spawning on all planets
     - Added new setting to allow Tiberium Centrifuging to give ores from any surface. Can be useful for modded playthroughs, but will bring back the scrap in vanilla. Use the Override Centrifuging Outputs or Exlcude Specific Resources settings to tweak as needed.
